base/sonarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
      - name: sonarr
        image: linuxserver/sonarr
        volumeMounts:
        - name: config
          mountPath: /config
        - name: data
          mountPath: /data
        ports:
        - name: http
          containerPort: 8989
      volumes:
        - name: config
          hostPath:
            path: /opt/sonarr/config
        - name: data
          nfs:
            server: your-nfs-server
            path: /your/path/to/data
