base/sonarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr
spec:
  type: NodePort
  ports:
    - port: 8989
      targetPort: http
      nodePort: 30084
      name: http
  selector:
    app: sonarr
