base/sonarr/ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-lb-to-sonarr
spec:
  endpointSelector:
    matchLabels:
      app: sonarr
  ingress:
  - fromCIDR:
    - 0.0.0.0/0 
    toPorts:
    - ports:
      - port: "8989"
        protocol: TCP
